# stormstack

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  LOCAL_REGISTRY_SETUP.md  PERFORMANCE_ANALYSIS.md  README.md  SECURITY.md  build.sh  docker-compose.registry.yml  docker-compose.yml  gen_secrets.py  lightning-control-plane.postman_collection.json  openapi.yaml  pom.xml  postman-collection.json  solid-report.json
.claude/: findings.md  team-slack.md
.claude/commands/: README-skills.md  critical-squad-SKILL.md  learn-SKILL.md  premerge-SKILL.md  security-review-SKILL.md  self-review-SKILL.md  self-review.md  solid-review-SKILL.md  team-analysis-SKILL.md  test-coverage-SKILL.md  write-docs-SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: aws-deploy.yml  claude-code-review.yml  claude-test-coverage.yml  maven.yml  release.yml
.review-output/: security-review.json
auth/: pom.xml
aws/: cloudformation-infrastructure.yaml  deploy.sh  ecs-task-definition.json
crates/stormstack-auth/: Cargo.toml
crates/stormstack-auth/src/: claims.rs  jwt.rs  lib.rs  oauth2.rs  password.rs  rbac.rs
crates/stormstack-core/: Cargo.toml
crates/stormstack-core/src/: command.rs  config.rs  error.rs  id.rs  lib.rs  snapshot.rs
crates/stormstack-db/: Cargo.toml
crates/stormstack-db/migrations/: 001_initial.sql
crates/stormstack-db/src/: lib.rs  models.rs  pool.rs
crates/stormstack-db/src/repositories/: container.rs  match_.rs  mod.rs  user.rs
crates/stormstack-ecs/: Cargo.toml
crates/stormstack-ecs/benches/: ecs_benchmark.rs
crates/stormstack-ecs/src/: lib.rs  world.rs
crates/stormstack-game-modules/: Cargo.toml
crates/stormstack-game-modules/src/: entity.rs  health.rs  lib.rs  movement.rs
crates/stormstack-modules/: Cargo.toml
crates/stormstack-modules/src/: descriptor.rs  lib.rs  loader.rs  module_trait.rs  registry.rs
crates/stormstack-net/: Cargo.toml
crates/stormstack-net/src/: extractors.rs  lib.rs  responses.rs  server.rs
crates/stormstack-server/: Cargo.toml
crates/stormstack-server/src/: commands.rs  container.rs  game_loop.rs  lib.rs  main.rs  resources.rs  routes.rs  session.rs  state.rs  ws.rs
crates/stormstack-test-utils/: Cargo.toml
crates/stormstack-test-utils/src/: fixtures.rs  harness.rs  lib.rs
crates/stormstack-wasm/: Cargo.toml
crates/stormstack-wasm-host/: Cargo.toml
crates/stormstack-wasm-host/src/: functions.rs  lib.rs  provider.rs  state.rs
crates/stormstack-wasm/src/: lib.rs  limits.rs  sandbox.rs
crates/stormstack-ws/: Cargo.toml
crates/stormstack-ws/src/: connection.rs  handler.rs  lib.rs  messages.rs  subscription.rs
docs/: .buildinfo  ai.md  api-reference.md  architecture.md  classloaders.md  control-plane.md  docker.md  frontend.md  game-masters.md  game-sdk.md  genindex.html  getting-started.md  http-routingtable.html  index.html  module-system.md  new-service-setup.md  objects.inv  performance.md  rendering-library.md  search.html  searchindex.js  team-collab.md  testing.md  useful-commands.md  why.md
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/analysis/: findings.md  team-slack.md
docs/api/: websocket-api.html
docs/architecture/: delta-compression.html  ecs-internals.html  index.html
docs/concepts/: ecs-basics.html  index.html
docs/contributing/: index.html
docs/getting-started/: index.html  installation.html  quickstart.html
docs/investigation/: findings-critical.md  recon-data.md  team-slack.md
docs/legacy/: ai-learnings.md  api-reference.md  classloaders.md  cli-quickstart.md  control-plane.md  frontend.md  module-system.md  new-service-setup.md  rendering-library.md  useful-commands.md
docs/lightning/: index.html
docs/llm-learnings/: CLAUDE_RENDERING_TEST_FRAMEWORK_DEVELOPMENT_SESSION.txt
docs/migration/: ARCHITECTURE_DECISIONS.md  BLOCKERS.md  INTERFACE_CONTRACTS.md  PROTOCOL.md  ROLLING_LEARNINGS.md  TEST_MAPPING.md  WASM_HOST_FUNCTIONS.md  coms.md  findings.md  go1.md
docs/source/: conf.py  index.rst
docs/tutorials/: hello-stormstack.html  index.html
engine-adapter/: pom.xml
engine-api/: pom.xml
examples/: pom.xml
examples/checkers/: pom.xml
examples/checkers-engine-module/: dependency-reduced-pom.xml  pom.xml
examples/checkers-gamemaster/: pom.xml
game-app/: pom.xml
game-renderer/: pom.xml
lightning-auth/: Dockerfile  Dockerfile.prebuilt  pom.xml
lightning-auth-adapter-quarkus-provider/: pom.xml
lightning-auth-adapter-spring-provider/: pom.xml
lightning-auth-core/: pom.xml
lightning-control-plane/: Dockerfile.prebuilt  pom.xml
lightning-control-plane-core/: pom.xml
lightning-engine/: CLAUDE.md  pom.xml
lightning-engine-extensions/: pom.xml
lightning-engine-extensions/game-masters/: pom.xml
lightning-engine-extensions/games/: pom.xml
lightning-engine-extensions/modules/: README  pom.xml
lightning-engine/api-acceptance-test/: pom.xml
lightning-engine/e2e-live-rendering-and-backend-acceptance-test/: pom.xml
lightning-engine/engine-adapter/: pom.xml
lightning-engine/engine-auth/: pom.xml
lightning-engine/gui/: pom.xml  (+1 more)
lightning-proxy/: pom.xml
llm-learnings/: IMPLEMENTATION-SUMMARY.md
scripts/: bootstrap-ecs-spot.sh  copy-modules.sh  package.json  seed-config-1000.json  seed-config-100x100x100.json  seed-config-10x100x100.json  seed-config-10x10x1000.json  seed-config-1x2x10.json  seed-config-4x2x1000.json  seed-config-multi-container.json  seed-config-small.json  seed-config-spawn-only.json  seed-config.json  seed-test-data.sh  seed-websocket.js  taskdef-sample.json  test-cmd.js  test-ws.js
test-game-module/: pom.xml
test_wasm_modules/: fuel_consumer.wat  infinite_loop.wat  memory_bomb.wat  stack_overflow.wat  valid_module.wat
thunder-cli/: .gitignore  Dockerfile  go.mod  go.sum
thunder-rendering-engine-core/: pom.xml
thunder-rendering-engine-test-framework/: pom.xml
utils/: pom.xml
(+3768 files in other folders)
