[package]
name = "stormstack-game-modules"
version = "0.1.0"
edition = "2024"

[dependencies]
stormstack-core = { path = "../stormstack-core" }
stormstack-ecs = { path = "../stormstack-ecs" }
stormstack-modules = { path = "../stormstack-modules" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
legion = "0.4"

[dev-dependencies]
