[package]
name = "stormstack-modules"
description = "Native hot-reload module system for StormStack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stormstack-core = { workspace = true }
stormstack-ecs = { workspace = true }
stormstack-wasm-host = { workspace = true }
libloading = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
