[package]
name = "stormstack-server"
description = "StormStack game server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "stormstack"
path = "src/main.rs"

[dependencies]
stormstack-core = { workspace = true }
stormstack-ecs = { workspace = true }
stormstack-wasm = { workspace = true }
stormstack-wasm-host = { workspace = true }
stormstack-auth = { workspace = true }
stormstack-net = { workspace = true }
stormstack-ws = { workspace = true }
stormstack-modules = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
stormstack-test-utils = { workspace = true }
tokio-test = { workspace = true }
