[package]
name = "stormstack-server"
description = "StormStack game server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "stormstack"
path = "src/main.rs"

[dependencies]
# Internal crates
stormstack-core = { workspace = true }
stormstack-ecs = { workspace = true }
stormstack-wasm = { workspace = true }
stormstack-wasm-host = { workspace = true }
stormstack-auth = { workspace = true }
stormstack-net = { workspace = true }
stormstack-ws = { workspace = true }
stormstack-modules = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
stormstack-test-utils = { workspace = true }
tokio-test = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true, features = ["util"] }
