[package]
name = "stormstack-test-utils"
description = "Test utilities for StormStack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stormstack-core = { workspace = true }
stormstack-ecs = { workspace = true }
stormstack-wasm = { workspace = true }
stormstack-auth = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
