[package]
name = "stormstack-wasm"
description = "WASM sandbox for executing untrusted game modules (wasmtime-based)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stormstack-core = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
